# my-website

./: .replit  app.py  forms.py  index.html  models.py  pyproject.toml  replit.md  routes.py  script.js  style.css
.local/state/replit/agent/: .latest.json
attached_assets/: blinking error_1757088310164.webm
instance/: elibrary.db
project/: index.html  script.js  style.css
static/css/: style.css
static/js/: main.js
templates/: base.html  index.html  login.html
templates/admin/: add_book.html  add_user.html  books.html  categories.html  dashboard.html  downloads.html  edit_book.html  reset_password.html  users.html
templates/user/: books.html  dashboard.html  profile.html
